add full tests for processes mdr, mm and osm